Fixed css layout issues and added image alt text

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ p, figure {
 
 }
 
+
 h1{
     font-family: var(--heading-font);
     font-size: var(--h1-size);
@@ -99,7 +100,9 @@ a:hover {
     justify-content: space-between;
     align-items: flex-start;
     background-color: rgb(34, 31, 24);
-    max-height: 100vh;
+    min-height: 100vh;
+    padding: 4rem 0 0 0;
+    overflow: hidden;
 }
 
 
@@ -107,28 +110,28 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin: 10rem 5rem;
-    gap: 6rem;
+    margin: 7rem 3rem 0 0;
+    gap: 3rem;
 }
 
 
-.exploration-text h2{
+.exploration-text h1{
     align-self: flex-end;
 }
 
 
 .spacecraft-text{
     background-color: rgb(89, 84, 62);
-    width: 1000px;
-    padding: 50px 40px;
+    width: 1200px;
+    padding: 2.4rem 2rem;
 
 }
 
 
 .exploration .exploration-images{
     position: relative;
-    width: 800px;
-    margin-top: 5rem;
+    width: 680px;
+    margin-top: 3rem;
 
 }
 
@@ -144,9 +147,9 @@ a:hover {
 
 .img-front{
     position: absolute;
-    bottom: -400px;
-    right: -90px;
-    width: 60%;
+    bottom: -350px;
+    right: -100px;
+    width: 65%;
     height: auto;
 }
 
@@ -155,7 +158,8 @@ a:hover {
 .spacecraft-gallery{
     display: flex;
     justify-content: space-around;
-    gap: 20rem;
+    gap: 4rem;
+    padding: 4rem 3rem;
     align-items: center;
     width: 100%;
     background-image: url(./bildemappe/neon-sumer-K8eWS_abimM-unsplash.jpg);
@@ -172,13 +176,13 @@ a:hover {
 }
 
 .spacecraft-gallery figure{
-    width: 500px;
+    width: 420px;
 }
 
 
 .spacecraft-gallery img{
-    width: 550px;
-    height: 450px;
+    width: 100%;
+    height: 340px;
     display: block;
     object-fit: cover;
 }
@@ -190,12 +194,13 @@ a:hover {
     background-size: cover;
     display: flex;
     flex-direction: column;
-    padding: 0 150px;
+    padding: 0 4rem 4rem;
 }
 
 .facts-part-one .cover img{
     width: 100%;
-    height: 600px;
+    height: 420px;
+    object-fit: cover;
     display: block;
 }
 
@@ -214,8 +219,7 @@ a:hover {
     padding: 0 5%;
     min-height: 100vh;
     background-color: rgb(57, 75, 89);
-    gap: 5rem;
-
+    gap: 3rem;
 }
 
 
@@ -270,10 +274,10 @@ a:hover {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 10%;
+    justify-content: space-between;
+    gap: 2rem;
     padding: 4rem 5rem;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-image: url(./bildemappe/neon-sumer-K8eWS_abimM-unsplash.jpg);
     background-size: cover;
@@ -283,4 +287,5 @@ a:hover {
 .gallery-item img{
     width: 500px;
     height: 400px;
+    object-fit: cover;
 }
